Optimize PDF processing for cost-effective practice environment
🏗️ Infrastructure Updates:
- Add conservative resource limits for t3.medium instances
- Set memory limit to 1Gi, CPU limit to 800m per container
- Extended health check timeouts for PDF processing startup
- Keep t3.medium instances for cost efficiency

📊 Processing Limits (Practice-Friendly):
- Maximum PDF size: 10MB (reduced from 50MB)
- Maximum pages: 20 (reduced from 100)
- Prevents resource exhaustion on smaller instances

💰 Cost Optimization:
- Designed for t3.medium instances (~/month)
- Conservative limits prevent OpenAI API cost spikes
- Suitable for learning and demonstration purposes

--- a/text_extraction/requirements.txt
+++ b/text_extraction/requirements.txt
@@ -11,3 +11,6 @@ PyYAML==6.0.1
 passlib
 redis==5.0.4
 boto3==1.34.106 # <-- ADDED for SQS
+pdf2image==1.17.0  # PDF to image conversion
+Pillow>=10.0.0  # Image processing
+PyPDF2==3.0.1  # PDF metadata extraction
