--- a/kubernetes/04-text-extraction-deployment.yaml
+++ b/kubernetes/04-text-extraction-deployment.yaml
@@ -60,18 +60,28 @@ spec:
             secretKeyRef:
               name: api-keys
               key: OPENAI_API_KEY
+        # Resource limits optimized for t3.medium instances (cost-effective)
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "200m"
+          limits:
+            memory: "1Gi"    # Conservative limit for PDF processing
+            cpu: "800m"      # Leave headroom for other services
         readinessProbe:
           httpGet:
             path: /extract/health
             port: 8001
-          initialDelaySeconds: 20 # Increased delay for more connections
+          initialDelaySeconds: 30 # Increased for PDF processing setup
           periodSeconds: 10
+          timeoutSeconds: 10
         livenessProbe:
           httpGet:
             path: /extract/health
             port: 8001
-          initialDelaySeconds: 20 # Increased delay for more connections
-          periodSeconds: 10
+          initialDelaySeconds: 60 # Increased for PDF processing setup
+          periodSeconds: 15
+          timeoutSeconds: 10
 ---
 apiVersion: v1
 kind: Service
