--- a/.github/workflows/cd-production.yml
+++ b/.github/workflows/cd-production.yml
@@ -305,6 +305,7 @@ jobs:
         NEXT_PUBLIC_AUTH_SERVICE_URL: http://${{ needs.deploy-to-kubernetes.outputs.alb_url }}
         NEXT_PUBLIC_EXTRACTION_SERVICE_URL: http://${{ needs.deploy-to-kubernetes.outputs.alb_url }}
         NEXT_PUBLIC_SUMMARIZATION_SERVICE_URL: http://${{ needs.deploy-to-kubernetes.outputs.alb_url }}
+        NODE_ENV: production
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
