--- a/.github/workflows/cd-production.yml
+++ b/.github/workflows/cd-production.yml
@@ -69,18 +69,29 @@ jobs:
         cd terraform
         terraform apply -auto-approve tfplan
         
-        # Export outputs for next jobs
+        # Export outputs for next jobs (with error handling)
         echo "auth_service_ecr_url=$(terraform output -raw auth_service_ecr_url)" >> $GITHUB_OUTPUT
         echo "text_extraction_service_ecr_url=$(terraform output -raw text_extraction_service_ecr_url)" >> $GITHUB_OUTPUT
         echo "text_summarization_service_ecr_url=$(terraform output -raw text_summarization_service_ecr_url)" >> $GITHUB_OUTPUT
-        echo "frontend_ecr_repository_url=$(terraform output -raw frontend_ecr_repository_url)" >> $GITHUB_OUTPUT
-        echo "frontend_app_runner_arn=$(terraform output -raw frontend_app_runner_arn)" >> $GITHUB_OUTPUT
         echo "eks_cluster_name=$(terraform output -raw eks_cluster_name)" >> $GITHUB_OUTPUT
         echo "rds_endpoint=$(terraform output -raw rds_endpoint)" >> $GITHUB_OUTPUT
         echo "docdb_endpoint=$(terraform output -raw docdb_endpoint)" >> $GITHUB_OUTPUT
         echo "redis_endpoint=$(terraform output -raw redis_endpoint)" >> $GITHUB_OUTPUT
         echo "sqs_queue_url=$(terraform output -raw sqs_summarization_queue_url)" >> $GITHUB_OUTPUT
         echo "s3_bucket_name=$(terraform output -raw user_images_bucket_name)" >> $GITHUB_OUTPUT
+        
+        # Frontend outputs (may not exist if frontend resources fail to create)
+        if terraform output -raw frontend_ecr_repository_url >/dev/null 2>&1; then
+          echo "frontend_ecr_repository_url=$(terraform output -raw frontend_ecr_repository_url)" >> $GITHUB_OUTPUT
+        else
+          echo "frontend_ecr_repository_url=" >> $GITHUB_OUTPUT
+        fi
+        
+        if terraform output -raw frontend_app_runner_arn >/dev/null 2>&1; then
+          echo "frontend_app_runner_arn=$(terraform output -raw frontend_app_runner_arn)" >> $GITHUB_OUTPUT
+        else
+          echo "frontend_app_runner_arn=" >> $GITHUB_OUTPUT
+        fi
 
   build-and-push-images:
     runs-on: ubuntu-latest
@@ -263,6 +274,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [terraform-infrastructure, deploy-to-kubernetes]
     environment: ${{ github.event.inputs.environment || 'production' }}
+    if: needs.terraform-infrastructure.outputs.frontend_ecr_repository_url != ''
     
     steps:
     - name: Checkout code
