Fix App Runner auto-scaling configuration name length
- Shorten auto_scaling_configuration_name from 'document-intelligence-frontend-scaling' (40 chars)
  to 'document-intelligence-frontend' (32 chars)
- AWS App Runner auto-scaling configuration names must be ≤32 characters
- Add cleanup-aws-resources.sh to .gitignore for temporary utilities
- This resolves the terraform apply validation error for App Runner resources

--- a/.gitignore
+++ b/.gitignore
@@ -209,3 +209,6 @@ coverage.xml
 # Security scan reports
 bandit-report.json
 safety-report.json
+
+# AWS cleanup scripts (temporary utilities)
+cleanup-aws-resources.sh
