Fix: Remove v2 suffixes and align GitHub Actions with Terraform outputs
- Remove all 'v2' suffixes from ECR repositories, secrets, IAM policies, and database subnet groups
- Fix GitHub Actions matrix to use correct Terraform output variable names
- Update DocumentDB subnet group name to remove v2 suffix
- Ensure consistent naming across Terraform, Kubernetes, and CI/CD configurations
- Ready for clean deployment with proper resource names

--- a/.github/workflows/cd-production.yml
+++ b/.github/workflows/cd-production.yml
@@ -311,11 +311,11 @@ jobs:
       matrix:
         service: 
           - name: user_auth
-            ecr_url: ${{ needs.terraform-infrastructure.outputs.ecr_auth_url }}
+            ecr_url: ${{ needs.terraform-infrastructure.outputs.auth_service_ecr_url }}
           - name: text_extraction
-            ecr_url: ${{ needs.terraform-infrastructure.outputs.ecr_extraction_url }}
+            ecr_url: ${{ needs.terraform-infrastructure.outputs.text_extraction_service_ecr_url }}
           - name: text_summarization
-            ecr_url: ${{ needs.terraform-infrastructure.outputs.ecr_summarization_url }}
+            ecr_url: ${{ needs.terraform-infrastructure.outputs.text_summarization_service_ecr_url }}
     
     steps:
     - name: Checkout code
