--- a/.github/workflows/cd-production.yml
+++ b/.github/workflows/cd-production.yml
@@ -332,9 +332,6 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
     - name: Build, tag, and push image - ${{ matrix.service.name }}
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
@@ -353,7 +350,7 @@ jobs:
           exit 1
         fi
         
-        # Build the Docker image
+        # Build the Docker image (using standard docker build - more reliable)
         echo "🏗️ Building Docker image..."
         docker build -f ${{ matrix.service.name }}/Dockerfile -t ${{ matrix.service.ecr_url }}:$IMAGE_TAG .
         
@@ -361,9 +358,16 @@ jobs:
         docker tag ${{ matrix.service.ecr_url }}:$IMAGE_TAG ${{ matrix.service.ecr_url }}:latest
         
         echo "📤 Pushing Docker images to ECR..."
-        # Push the Docker image to ECR
-        docker push ${{ matrix.service.ecr_url }}:$IMAGE_TAG
-        docker push ${{ matrix.service.ecr_url }}:latest
+        # Push the Docker image to ECR with retry logic
+        for i in {1..3}; do
+          if docker push ${{ matrix.service.ecr_url }}:$IMAGE_TAG && docker push ${{ matrix.service.ecr_url }}:latest; then
+            echo "✅ Successfully pushed images on attempt $i"
+            break
+          else
+            echo "⚠️ Push failed on attempt $i, retrying..."
+            sleep 10
+          fi
+        done
         
         echo "✅ Successfully built and pushed ${{ matrix.service.name }} image"
 
@@ -560,22 +564,56 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
+      with:
+        driver: docker
+        install: true
 
     - name: Build and Push Frontend Docker Image
-      uses: docker/build-push-action@v5
-      with:
-        context: ./frontend
-        file: ./frontend/Dockerfile
-        push: true
-        tags: |
-          ${{ needs.terraform-infrastructure.outputs.ecr_frontend_url }}:${{ github.sha }}
-          ${{ needs.terraform-infrastructure.outputs.ecr_frontend_url }}:latest
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-        platforms: linux/amd64
-        build-args: |
-          NODE_ENV=production
-          NEXT_TELEMETRY_DISABLED=1
+      timeout-minutes: 15
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        IMAGE_TAG: ${{ github.sha }}
+        FRONTEND_ECR_URL: ${{ needs.terraform-infrastructure.outputs.ecr_frontend_url }}
+      run: |
+        echo "🔍 Frontend build debug information:"
+        echo "  Frontend ECR URL: $FRONTEND_ECR_URL"
+        echo "  Image Tag: $IMAGE_TAG"
+        echo "  ALB URL: ${{ steps.get-alb-url.outputs.alb_url }}"
+        
+        # Validate ECR URL is not empty
+        if [ -z "$FRONTEND_ECR_URL" ]; then
+          echo "❌ ERROR: Frontend ECR URL is empty"
+          exit 1
+        fi
+        
+        # Build the frontend Docker image
+        echo "🏗️ Building frontend Docker image..."
+        docker build \
+          --build-arg NODE_ENV=production \
+          --build-arg NEXT_TELEMETRY_DISABLED=1 \
+          --build-arg NEXT_PUBLIC_AUTH_SERVICE_URL="${{ steps.get-alb-url.outputs.alb_url }}" \
+          --build-arg NEXT_PUBLIC_EXTRACTION_SERVICE_URL="${{ steps.get-alb-url.outputs.alb_url }}" \
+          --build-arg NEXT_PUBLIC_SUMMARIZATION_SERVICE_URL="${{ steps.get-alb-url.outputs.alb_url }}" \
+          -f frontend/Dockerfile \
+          -t $FRONTEND_ECR_URL:$IMAGE_TAG \
+          ./frontend
+        
+        echo "🏷️ Tagging frontend image..."
+        docker tag $FRONTEND_ECR_URL:$IMAGE_TAG $FRONTEND_ECR_URL:latest
+        
+        echo "📤 Pushing frontend images to ECR..."
+        # Push with retry logic
+        for i in {1..3}; do
+          if docker push $FRONTEND_ECR_URL:$IMAGE_TAG && docker push $FRONTEND_ECR_URL:latest; then
+            echo "✅ Successfully pushed frontend images on attempt $i"
+            break
+          else
+            echo "⚠️ Frontend push failed on attempt $i, retrying..."
+            sleep 10
+          fi
+        done
+        
+        echo "✅ Frontend Docker image built and pushed successfully"
 
     - name: Wait for App Runner Deployment
       run: |
